[tool.poetry]
name = "decision-assistant"
version = "0.1.0"
description = "This app helps you make decisions by understanding your values, their importance and how each option aligns with those."
authors = ["CodeKobzar"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
pytest = "^8.0.0"
toml = "^0.10.2"
coverage = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
